@@ -3,32 +3,32 @@
 
 void test032::Fun(int32_t Y)
 {
-  int32_t 	_tmp__0001, _tmp__0002;
-  _tmp__0002 = _tmp__0001 = X + Y;
-  if ((_tmp__0002 == 10) || (_tmp__0002 == 67)) {
+  int32_t 	_tmp__0001;
+  _tmp__0001 = X + Y;
+  if ((_tmp__0001 == 10) || (_tmp__0001 == 67)) {
+    goto _case__0003;
+  }
+  if (_tmp__0001 == (A * 2)) {
     goto _case__0004;
   }
-  if (_tmp__0002 == (A * 2)) {
+  if ((_tmp__0001 >= 30) && (_tmp__0001 <= 40)) {
     goto _case__0005;
   }
-  if ((_tmp__0002 >= 30) && (_tmp__0002 <= 40)) {
-    goto _case__0006;
-  }
-  goto _case__0007;
-  _case__0004: ;
+  goto _case__0006;
+  _case__0003: ;
   _OUTA ^= 0x1;
-  goto _endswitch_0003;
-  _case__0005: ;
+  goto _endswitch_0002;
+  _case__0004: ;
   _OUTA ^= 0x2;
-  goto _endswitch_0003;
-  _case__0006: ;
+  goto _endswitch_0002;
+  _case__0005: ;
   _OUTA ^= 0x4;
   _OUTA ^= 0x8;
-  goto _endswitch_0003;
-  _case__0007: ;
+  goto _endswitch_0002;
+  _case__0006: ;
   _OUTA ^= 0x10;
-  goto _endswitch_0003;
-  _endswitch_0003: ;
+  goto _endswitch_0002;
+  _endswitch_0002: ;
   X = X + 5;
 }
 
