@@ -552,10 +552,12 @@ doSpinTransform(AST **astptr, int level)
         const char *case_name = ast->kind == AST_CASETABLE ? "case_fast" : NULL;
         doSpinTransform(&ast->left, level);
         AstReportAs(ast, &saveinfo); // any newly created AST nodes should reflect debug info from this one
+#ifdef NEVER // handled in CreateSwitch now        
         if (ast->left->kind != AST_IDENTIFIER && ast->left->kind != AST_ASSIGN) {
             AST *var = AstTempLocalVariable("_tmp_", NULL);
             ast->left = AstAssign(var, ast->left);
         }
+#endif        
         while (list) {
             AST *caseitem;
             if (list->kind != AST_STMTLIST) {
